Project-101-kittens-carousel-static-website-ec2/kittens-carosel-cfn.yaml
AWSTemplateFormatVersion: 2010-09-09
# with | we can write our description in more lines and without ""
Description: |
  This CloudFormation Template was written for
  running Kittens Carousel Static Website on EC2.
  Kittens Carousel Static Website will be
  deployed on Amazon Linux 2
  (ami-05fa00d4c63e32376) EC2 Instance with
  custom security group which allows http
  connections on port 80 and ssh port 22 from
  anywhere. Kittens Carousel Static Website
  is downloaded from my Public Github repository,
  then deployed on Apache Web Server.
Resources:
  WebServerSecurityGroup: # Security Group
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable HTTP for Apache Web Server and SSH for secure connection" # Required
      SecurityGroupIngress:
        # The order of operations is not important
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  WebServerHost: # EC2 Instance
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-05fa00d4c63e32376
      InstanceType: t2.micro
      KeyName: First_Key
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup # we use it as a list, because format want me to write it as a list
      Tags:
        - Key: Name
          # as a value we assign stack name. Stack name will be created later. Because of that we use sub function to handle this issue.
          Value: !Sub Web Server of ${AWS::StackName} # here we use sub function in order to assign a not defined value. This value is not already created. It will be created later
      UserData:
        Fn::Base64: !Sub |
          #! /bin/bash
          yum update -y
          yum install httpd -y
          FOLDER="https://raw.githubusercontent.com/HIANDIC/my-projects/main/Project-101-kittens-carousel-static-website-ec2/static-web"
          cd /var/www/html
          wget $FOLDER/index.html
          wget $FOLDER/cat0.jpg
          wget $FOLDER/cat1.jpg
          wget $FOLDER/cat2.jpg
          wget $FOLDER/cat3.png
          systemctl start httpd
          systemctl enable httpd

# here we can take an output as DNSName of cloudFormation Service
Outputs:
  WebSiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName # !GetAtt WebServerHost.PublicIPV4 is another option for assign this value to variable PublicAddress
    Description: Kittens Carousel Application URL
